# fake-coro

./: .gitignore  LICENSE  PyPI.md  README.md  pyproject.toml
.github/workflows/: test.yaml
src/fake_coro/: __init__.py
tests/: test_average.py  test_exception.py  test_fib.py  test_for.py  test_race_condition.py  test_yield_from.py
